// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Button23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <button
      id="Button23456"
    >
      Button23456
    </button>
  </div>
</div>
`;

exports[`Disabled Col 1`] = `
<div>
  <div
    id="bl-Disabled Col23456"
  >
    <input
      id="Disabled Col23456"
    />
  </div>
</div>
`;

exports[`Input 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Input23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <input
      id="Input23456"
    />
  </div>
</div>
`;

exports[`Input 2`] = `
<div>
  <div
    class="lf-col"
    id="bl-Input23456"
    style="--lf-span: 24; --lf-span-md: 4;"
  >
    <input
      id="Input23456"
    />
  </div>
</div>
`;

exports[`Paragraph span: 12 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Paragraph span: 1223456"
    style="--lf-span: 24; --lf-span-md: 12;"
  >
    <div
      id="Paragraph span: 1223456"
    >
      Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Paragraph style 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Paragraph style23456"
    style="--lf-span: 24; --lf-span-md: 24; background: white; border-radius: 20px;"
  >
    <div
      id="Paragraph style23456"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;
